--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
             "production": {
               "budgets": [{
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "4mb",
                   "maximumError": "5mb"
                 },
                 {
